--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,3 +1,18 @@
+.react-grid-Container {
+  color: #bd4b7b;
+  font-family: Arial, sans-serif;
+  font-size: 12px; }
 
+.ag-root-wrapper {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: #bd4b7b;
+  height: 100%; }
+
+p {
+  color: pink; }
+
+.hej {
+  color: red; }
 
 /*# sourceMappingURL=main.css.map */
