--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,6 +1,11 @@
+
+// General rules
 @import '_colors'
 @import '_links'
-@import '_prospect'
 @import '_settings'
 @import '_spaces'
-@import '_text'
+@import '_tables'
+@import 'text_general'
+
+// Domains
+@import '_prospect'
